Skins/UniversityCollege/skin.css
/* ... */
/**
 * -------------------------------------------
 * Navigation CSS
 * -------------------------------------------
 **/
#navigation {
  height: 34px;
  clear: both;
}
#navigation .RadMenu {
  float: none;
}
#navigation .RadMenu_Default ul {
  zoom: 1;
}
#navigation .RadMenu_Default ul:before, #navigation .RadMenu_Default ul:after {
  content: "\0020";
  display: block;
  height: 0;
  overflow: hidden;
}
#navigation .RadMenu_Default ul:after {
  clear: both;
}
#navigation .RadMenu_Default .rmlink {
  font-family: Arial, Helvetica, sans-serif;
  font-weight: bold;
}
#navigation .RadMenu_Default .rmRootGroup {
  border: none;
  background: transparent;
  font-size: 15px;
}
#navigation span.rmText {
  margin: 0;
  padding: 0;
}
#navigation span.rmText:hover {
  border-bottom: 2px solid #f8f3d2;
}
#navigation li a {
  margin: 0 5px;
  padding: 0 10px;
  cursor: pointer;
  font-family: Arial, Helvetica, sans-serif;
  font-weight: bold;
  font-size: 15px;
  display: block;
}
#navigation li a:link, #navigation li a:visited {
  color: #f8f3d2;
  text-decoration: none;
}
#navigation li .rmItem span.rmExpandRight {
  position: relative;
  left: 0px;
  background: url("img/dropdown-right.png") no-repeat 180px 2px;
}
#navigation li .rmFirst, #navigation li.rmFirst a {
  margin-left: 0;
  padding-left: 0;
}

#navigation .RadMenu_default .rmRootGroup, #navigation .RadMenu_default .rmLink,
#navigation .RadMenu_default .rmGroup .rmText, #navigation .RadMenu_default .rmVertical .rmText,
#navigation .RadMenu_default .rmLeftArrow, #navigation .RadMenu_default .rmRightArrow, #navigation .RadMenu_default .rmTopArrow, #navigation .RadMenu_default .rmBottomArrow {
  background-image: none;
  background: transparent;
}
#navigation .rmSlide {
  overflow-x: visible;
  overflow-y: visible;
}
#navigation ul.rmGroup {
  background: #f8f3d2;
  padding: 5px 20px;
  margin: 10px 0 0;
  border: 1px solid #7d110c;
  border-top: none;
}
#navigation ul.rmGroup .rmItem {
  padding: 0;
}
#navigation ul.rmGroup span.rmText:hover {
  border: none;
  color: #7d110c;
}
#navigation .rmItem ul.rmLevel2, #navigation .rmItem ul.rmLevel3 {
  border: 1px solid #7d110c;
  margin: -6px 0 0 25px;
  padding-top: 5px;
}
#navigation .rmItem a {
  white-space: pre-line;
}

#navigation ul.rmGroup li.rmFirst > a {
  border-top: none !important;
}
#navigation ul.rmGroup li.rmLast > a {
  border-bottom: none !important;
}
#navigation ul.rmGroup a {
  width: 190px !important;
  margin: 0;
  padding: 10px 0;
  display: block;
  font-size: 9pt;
  color: #858372;
  text-shadow: 0px 1px 0px #ffffff;
  border-bottom: 1px solid #adaa93;
  border-top: 1px solid #fcf9e9;
}

#side-navigation
{
	width:170px !important;
	opacity: 0.99;
}
	
#side-navigation .RadMenu
{
	width:170px;
	display:block;
}

#side-navigation .RadMenu_Default
{
	width:170px;
	display:block;
}
	
#side-navigation .rmLink
{
	width:170px;
	display:block;
}

#side-navigation  .rmLink .rmRootLink
{
	width:170px;
	display:block;
}

#side-navigation li a {
	width:170px;
	display:block;
	margin: 0;
	padding: 0;
}
	
#side-navigation li
{
	width:170px;
	display:block;
}
	
#side-navigation .rmrootlink
{
	width:170px;
	display:block;
}
#side-navigation .rmItem 
{
	border-top:1px #fff solid;
	border-bottom:1px #ddd solid; 
	width:170px;
	display:block;
	text-wrap:normal; !important
	text-align:left;
}
  
#side-navigation .rmFirst
{
	border-top:none;
}
	
#side-navigation .rmLast
{
	border-bottom:none;
}

#side-navigation .rmText {
  margin: 0;
  padding: 5px 0;
  font-family: Georgia, "Times New Roman", serif;
  font-size: 12px;
  line-height: 1.2;
  display:block;
  width:170px;
  white-space:normal;
 }



#side-navigation span.rmText:hover
{
	text-decoration:underline;
	cursor: pointer;
}

/** 
 * -------------------------------------------
 * Footer CSS
 * -------------------------------------------
 **/
.all .footer {
  width: 100%;
  background: #121212;
  zoom: 1;
}
.all .footer:before, .all .footer:after {
  content: "\0020";
  display: block;
  height: 0;
  overflow: hidden;
}
.all .footer:after {
  clear: both;
}
.all .footer .container {
  text-shadow: 0px 1px 0px #000000;
  color: #858372;
}

#sub-navigation {
  height: 20px;
  margin: 20px 0 15px 0;
}
#sub-navigation .RadMenu {
  float: none;
}
#sub-navigation .RadMenu .rmLink {
  font-family: Arial, Helvetica, sans-serif;
  font-size: 10pt;
}
#sub-navigation .rmText {
  margin: 0;
  padding: 0;
  color: #858372;
}
#sub-navigation .rmText:hover {
  border-bottom: 1px solid #858372;
}
#sub-navigation .rmItem {
  padding: 0;
}
#sub-navigation li {
  float: left;
}
#sub-navigation li a {
  margin: 0;
  padding: 0 12px;
  text-decoration: none;
  cursor: pointer;
  border-left: 1px solid #2a2a2a;
}
#sub-navigation li a:link, #sub-navigation li a:visited, #sub-navigation li a:active {
  color: #858372;
  text-decoration: none;
}
#sub-navigation li a:hover {
  text-decoration: underline;
}
#sub-navigation li:first-child a {
  padding-left: 0;
  border-left: 0;
}

#left-footer {
  float: left;
  zoom: 1;
}
#left-footer:before, #left-footer:after {
  content: "\0020";
  display: block;
  height: 0;
  overflow: hidden;
}
#left-footer:after {
  clear: both;
}
#left-footer ul.footer-links {
  margin: 0;
  padding: 0;
  float: left;
  font-size: 8pt;
}
#left-footer ul.footer-links li {
  list-style: none;
  display: inline;
  color: #858372;
}
#left-footer ul.footer-links li a {
  padding: 2px;
  display: inline-block;
  font-size: 7pt;
  color: #858372;
}
#left-footer ul.footer-links.first {
  margin-right: 10px;
}
#left-footer ul.footer-links.first li:first-child a {
  padding-left: 0;
}

.footer-info {
  width: 180px;
  float: right;
  margin: 10px 0;
  border-left: 1px solid #2a2a2a;
  padding: 0 0 0 40px;
}
.footer-info * {
  font-size: 8pt;
  color: #858372;
}
.footer-info a {
  font-family: Arial, Helvetica, sans-serif;
  font-weight: normal;
  font-size: 10pt;
}
/* ... */

